# vietnamese-fullname-generator

./: README.MD  setup.cfg  setup.py
src/: main.py
src/data/: male.name
src/vn_fullname_generator/: __init__.py  generator.py
src/vn_fullname_generator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/vn_fullname_generator/data/: female.name
