[metadata]
# replace with your username:
name = vn_fullname_generator
version = 0.0.2
author = Lh Long
author_email = lhlong@github.com
description = Generate Vietnamese Fullname
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lhlong/vietnamese-fullname-generator
project_urls =
    Bug Tracker = https://github.com/lhlong/vietnamese-fullname-generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
python_requires = >=3.7
package_data = *.txt
include_package_data = True
[options.packages.find]
where = src